# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
gendiff/: build_diff.py  file_loader.py  gendiff.py  parser.py
gendiff/formatters/: __init__.py  __init__py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
hexlet_code/: gendiff.py
hexlet_code/scripts/: gendiff.py
tests/: process_file.py  test_gendiff.py  test_gendiff_json.py  test_gendiff_yaml.py
