[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Максим Порошин <baiter159159@gmail.com>"]
readme = "README.md"
packages = [
  { include = "hexlet_code" },
]

[tool.poetry.dependencies]
python = "^3.10.12"
flake8 = "^7.1.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
